# reverse

./: CMakeLists.txt  haha.html  reverse.sln
reverse/: Socket.cpp  Socket.h  board.cpp  board.h  game.cpp  game.h  human.cpp  human.h  main.cpp  player.cpp  player.h  playerbase.cpp  playerbase.h  reverse.vcxproj  reverse.vcxproj.filters
